# AI_BOOK

./: $null  .gitignore  QWEN.md  README.md
.claude/: settings.local.json
backend/: pyproject.toml  requirements.txt  temp_qdrant.env
backend/docs/: README.md
backend/history/prompts/general/: 006-update-qdrant-config-with-new-credentials.general.prompt.md
backend/src/: api.py  main.py
backend/src/embedding_pipeline.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
backend/src/utils/: chunker.py  config.py  content_extractor.py  crawler.py  embedder.py  error_handling.py  logging_util.py  models.py  vector_store.py
backend/tests/: test_api_integration.py  test_chunker.py  test_content_extractor.py  test_content_ingestion_integration.py  test_crawler.py  test_embedder.py  test_embedding_integration.py  test_end_to_end.py  test_vector_storage_integration.py  test_vector_store.py
book_frontend/: .eslintrc.js  cypress.config.js  docusaurus.config.js  package-lock.json  package.json  sidebars.js
book_frontend/docs/: index.md
book_frontend/src/css/: custom.css
humanoid-docs/: docusaurus.config.js  package-lock.json  package.json  sidebars.js
specs/001-embedding-pipeline-setup/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-ros2-robotics-module/: spec.md
specs/002-digital-twin-sim/: spec.md
specs/003-ai-robot-brain/: spec.md
specs/004-vla-integration/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/005-docusaurus-ui-upgrade/: data-model.md  quickstart.md  research.md  spec.md  tasks.md
(+69 files in other folders)
